much better now

--- a/.github/workflows/buildpkg.yml
+++ b/.github/workflows/buildpkg.yml
@@ -51,13 +51,13 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: copy ttf-iosevka-term-custom-git PKGBUILD into build ctnr
+      - name: copy ttf-iosevka-custom-git PKGBUILD into build ctnr
         run: |
-          buildah copy --chown dev ctnr pkgs/ttf-iosevka-term-custom-git /home/dev/ttf-iosevka-term-custom-git
+          buildah copy --chown dev ctnr pkgs/ttf-iosevka-custom-git /home/dev/ttf-iosevka-custom-git
 
-      - name: build and siphon ttf-iosevka-term-custom-git from build ctnr, setting PKG to artifact filename
+      - name: build and siphon ttf-iosevka-custom-git from build ctnr, setting PKG to artifact filename
         run: |
-          buildah config -u dev --workingdir /home/dev/ttf-iosevka-term-custom-git ctnr
+          buildah config -u dev --workingdir /home/dev/ttf-iosevka-custom-git ctnr
           buildah run ctnr makepkg --noconfirm -s
 
           buildah run ctnr ls -l
